--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <!-- Your code here! -->
+    <link rel="stylesheet" href="./style.css">
+    <style>
+      body {
+        background-color: #00b3e6;
+      }
+      div {
+        width: 700pt;
+        margin: auto;
+        font-family: "Helvetica Neue";
+        background: white;
+        padding: 30pt; 
+      }
+      #main-header {
+        color: red;
+        font-size: 22pt;
+      }
+      .perspective-questions {
+        font-style: italic;
+      }
+    </style>
   </head>
 
   <body>
-
-    <div>
-      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
+    <div>     
+      <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?
+      </h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
       <ul>
